--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -8,10 +8,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="{{ renderData.description or description or metadata.description }}">
   <title>{{ renderData.title or title or metadata.title }}</title>
-  <link rel="stylesheet" href="/styles/index.css">
+  <link rel="stylesheet" href="/assets/styles/index.css">
 </head>
 <body>
   {{ content | safe }}
-  <script src="/scripts/index.js"></script>
+  <script src="/assets/scripts/index.js"></script>
 </body>
 </html>
