feat: add styles to example pages, show embeds

--- a/website/src/_includes/layouts/inner.njk
+++ b/website/src/_includes/layouts/inner.njk
@@ -17,8 +17,12 @@
   </head>
 
   <body>
-    {{ content | safe }}
+    <header class="page-header">
 
+    </header>
+    <main class="page-content">
+      {{ content | safe }}
+    </main>
     <script src="/assets/scripts/index.js"></script>
   </body>
 </html>
