feat: show landing page

--- a/website/src/index.njk
+++ b/website/src/index.njk
@@ -1,5 +1,12 @@
 ---
 layout: layouts/base.njk
-title: Celeste
 ---
-<h1>{{siteData.name}}</h1>
+
+<main class="landing">
+  <h1 class="landing__project-name">
+    {{siteData.name}}
+  </h1>
+  <h2 class="landing__project-description">
+    {{siteData.description}}
+  </h2>
+</main>
