fix: update title color

--- a/website/src/styles/landing.scss
+++ b/website/src/styles/landing.scss
@@ -5,11 +5,12 @@
   justify-content: center;
   width: 100vw;
   height: 100vh;
-  padding: 10% 15% 10% 10%;
+  padding: 5% 10% 5% 5%;
 
   &__project-name {
     font-size: 120px;
     margin: 0 0 40px 0;
+    color: #333333
   }
 
   &__project-description {
