feat: add section with supporters

--- a/website/src/index.njk
+++ b/website/src/index.njk
@@ -10,3 +10,8 @@ layout: layouts/base.njk
     {{siteData.description}}
   </h2>
 </main>
+
+<article class="supporters">
+  <h3 class="supporters__title">Supporters</h3>
+  <img src="/assets/images/supporters.png" alt="Supporters" class="supporters__image">
+</article>
