--- a/website/src/styles/example.scss
+++ b/website/src/styles/example.scss
@@ -32,7 +32,7 @@
 }
 
 .example__snippet {
-  border: 1px solid #bababa;
+  border: 1px solid #cfcfcf;
   border-radius: 4px;
   margin: 0 0 24px 0;
 
