feat: update styles and content

--- a/website/src/_includes/layouts/inner.njk
+++ b/website/src/_includes/layouts/inner.njk
@@ -18,7 +18,7 @@
 
   <body>
     <header class="page-header">
-
+      <a href="/" class="page-header__logo">{{siteData.name}}</a>
     </header>
     <main class="page-content">
       {{ content | safe }}
