--- a/website/src/styles/example.scss
+++ b/website/src/styles/example.scss
@@ -7,7 +7,7 @@
   grid-template-rows: auto 1fr;
   row-gap: 24px;
   column-gap: 24px;
-  min-height: calc(100vh - 60px - 64px);
+  height: calc(100vh - 60px - 64px);
 
   & > * {
     margin: 0;
@@ -18,8 +18,17 @@
   grid-area: header;
 }
 
+.example__title {
+  margin: 0 0 16px 0;
+}
+
+.example__product {
+  margin: 0;
+}
+
 .example__snippets {
   grid-area: snippets;
+  overflow: auto;
 }
 
 .example__result {
