feat: add placeholder image

--- a/website/src/index.njk
+++ b/website/src/index.njk
@@ -19,7 +19,7 @@ layout: layouts/base.njk
         <li class="examples-list__item">
           <a href="/examples/{{ example.id }}/index.html" class="examples-list__item-preview">
             <figure class="examples-list__item-preview-figure">
-              <img src="" alt="">
+              <img src="/assets/images/coding.svg" alt="">
             </figure>
           </a>
           <a href="/examples/{{ example.id }}/index.html" class="examples-list__item-title">{{ example.title }}</a>
